# ExcelSearchPro

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  CreateShortcut.vbs  DEPLOYMENT.md  DISTRIBUTION.md  DISTRIBUTION_COMPLETE.md  GITHUB_SETUP.md  MANIFEST.in  MARKETING_STRATEGY.md  PRESS_RELEASE.md  README.md  RELEASE_SUMMARY.md  SOCIAL_MEDIA_CONTENT.md  __init__.py  build_exe.py  build_package.bat  build_package.sh  deploy_setup.py  excel_search_cli.py  excel_search_gui.py  install.py  main.py  main_old.py  pyproject.toml  run.bat  run.ps1  search_engine.py  setup.py  test_build_script.py  test_excelsearchpro.py  utils.py  verify_setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml
release/: LICENSE  README.md  install.bat
screenshots/: README.md
