[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excelsearchpro"
version = "1.0.0"
description = "Fast Excel Database Search Tool with GUI and CLI interfaces"
readme = "README.md"
authors = [
    {name = "ExcelSearchPro Team", email = "contact@excelsearchpro.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Database",
    "Topic :: Utilities"
]
keywords = [
    "excel", "search", "database", "csv", "gui", "cli", 
    "pandas", "data-analysis", "spreadsheet", "office"
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/Ziad-irl/ExcelSearchPro"
Repository = "https://github.com/Ziad-irl/ExcelSearchPro"
Documentation = "https://github.com/Ziad-irl/ExcelSearchPro#readme"
"Bug Tracker" = "https://github.com/Ziad-irl/ExcelSearchPro/issues"

[project.scripts]
excelsearchpro = "excelsearchpro.main:main"
excel-search-gui = "excelsearchpro.excel_search_gui:main"
excel-search-cli = "excelsearchpro.excel_search_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800"
]

[tool.setuptools]
packages = ["excelsearchpro"]

[tool.setuptools.package-data]
excelsearchpro = ["*.md", "*.txt"]
